objects/sansancard__TransferMeta__c.object
<CustomObject>
    <fields>
        <fullName>sansancard__DisplayField__c</fullName>
        <label>Display field settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__FieldValue__c</fullName>
        <label>Field value settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__MapValue__c</fullName>
        <label>Map settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sansancard__RecordType__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transfer Metadata</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>